# DevConsole

./: .gitignore  Cargo.toml  README.md  a.md  flake.nix  git-conventional-commits.yaml  note.sh
.github/: copilot-instructions.md
.services/pktuart/: run
.services/serial-monitor/: run
.services/server/: run
dc_pktuart/: Cargo.toml
dc_pktuart/src/: main.rs  pkt_uart.rs
devconsole/: Cargo.toml
devconsole-client/: Cargo.toml
devconsole-client/docs/examples/: error-handling.md
devconsole-client/src/: lib.rs
devconsole-data-logger/: Cargo.toml
devconsole-data-logger/docs/: index.md
devconsole-data-logger/src/: main.rs
devconsole-protocol/: Cargo.toml
devconsole-protocol/src/: lib.rs
devconsole-serial-monitor/: Cargo.toml
devconsole-serial-monitor/docs/: index.md
devconsole-serial-monitor/src/: device_watcher.rs  main.rs  serial_monitor.rs
devconsole-server/: Cargo.toml
devconsole-server/docs/: index.md
devconsole-server/src/: client.rs  main.rs  server.rs
devconsole/src/: client.rs  lib.rs  protocol.rs
devconsole_cli/: Cargo.toml  README.md
devconsole_cli/src/: main.rs
devconsole_client/: Cargo.toml
devconsole_client/docs/: index.md
devconsole_client/docs/examples/: basic.md  multi-channel.md
devconsole_data_logger/: Cargo.toml
devconsole_data_logger/src/: main.rs
devconsole_protocol/docs/: index.md
devconsole_protocol/src/: lib.rs
devconsole_serial/: Cargo.toml
devconsole_serial/src/: lib.rs
devconsole_serial_logger/: Cargo.toml
devconsole_serial_logger/src/: main.rs  pkt_uart.rs
devconsole_serial_monitor/: Cargo.toml
devconsole_serial_monitor/src/: device_watcher.rs  main.rs  serial_monitor.rs
devconsole_serial_protocol/src/: lib.rs
devconsole_server/: Cargo.toml
devconsole_server/src/: channel.rs  client.rs  id_manager.rs  main.rs  server.rs
docs/: index.md
src/serial-mon/: device_watcher.rs  main.rs  serial_monitor.rs
