[workspace]
resolver = "3"
members = [
    "devconsole",
    "devconsole_server",
    "devconsole_data_logger",

    "devconsole_serial_monitor",
    "devconsole_serial_protocol",
    "devconsole_serial_logger",
    "devconsole_cli",

    "dc_pktuart",
]

[patch.crates-io]
devconsole = { path = "devconsole" }
devconsole_serial_protocol = { path = "devconsole_serial_protocol" }
