[package]
name = "dc_pktuart"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
serde_json = "1.0.142"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time"] }
devconsole = "1.0.0"
devconsole_serial_protocol = { path = "../devconsole_serial_protocol" }

[dependencies.srobo_base]
git = "https://github.com/nnctroboticsclub/srobo_base.git"
features = ["std"]
rev = "v1.0.6"
