[package]
name = "devconsole_server"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
devconsole_protocol = { path = "../devconsole-protocol" }
serde_json = "1.0.142"
tokio-tungstenite = "0.27.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.31"
